basic service level auth integration and prep for heroku deployment
